# vibe-kanban

./: .gitignore  Cargo.toml  README.md  local-build.sh  package.json  pnpm-lock.yaml
.github/actions/setup-node/: action.yml
.github/workflows/: pre-release.yml  publish.yml  remote-deploy-dev.yml  tauri-app-build.yml  tauri-build.yml  test.yml
crates/api-types/: Cargo.toml
crates/db/: Cargo.toml
crates/db/.sqlx/: query-0b86ef0f4d322dd5d84bcc6791a5043f01b3693ba8c2333e5af52ecf33357034.json  query-38790730dea5839edbe881017745e1843a81518d264396e2a291bacb2ce96188.json  query-6a0e866294a62f3571880bf09c2a1f926f4fd06e5e6b8173c09c0b1acd8cdbca.json  query-ba30347a83c2e4cbf7b324b066d1bc0c67d9cadc7d5cd9d7bdb2c82254bcc70e.json  (+3 more)
crates/deployment/: Cargo.toml
crates/e2ee-core/src/: keys.rs  sealed_box.rs
crates/e2ee-gateway/: Cargo.toml
crates/executors/: Cargo.toml  default_profiles.json
crates/git/: Cargo.toml
crates/local-deployment/: Cargo.toml
crates/remote/: Cargo.toml
crates/review/: Cargo.toml
crates/server/: Cargo.toml
crates/services/: Cargo.toml
crates/utils/: Cargo.toml
development/: E2EE.md
docs/: index.mdx
docs/core-features/: monitoring-task-execution.mdx
docs/remote-access/: e2ee.mdx
frontend/: package.json  postcss.config.cjs
frontend/src/: App.tsx  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
npx-cli/: package.json
shared/: types.ts
shared/schemas/: amp.json  claude_code.json  cline.json  codex.json  copilot.json  cursor_agent.json  droid.json  gemini.json  opencode.json  qwen_code.json
tauri-app/: Cargo.toml  tauri.conf.json  tauri.ios.conf.json
tauri-app/capabilities/: default.json  mobile.json
tauri-app/src/: backend_manager.rs  lib.rs  main.rs
(+167 files in other folders)
